# justdo

./: .gitignore  Makefile  README.md  justdo.json  pyproject.toml
.github/workflows/: publish.yml
docs/: api.md  architecture.md  components.md  development.md  testing.md
src/justdo/: cli.py  emotion.py
src/todo/: __init__.py  ai.py  api.py  cli.py  emotion.py  manager.py  models.py  prompts.py  task_analyzer.py  user_profile.py
src/todo/static/: index.html
tests/: __init__.py
tests/integration/: test_api.py
tests/unit/: __init__.py  test_ai.py  test_cli.py  test_emotion.py  test_emotion_parallel.py  test_manager.py  test_models.py  test_task_analyzer.py  test_user_profile.py
